tests/fsharp/typecheck/sigs/neg_byref_7.bsl

neg_byref_7.fs(2,31,2,35): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_7.fs(2,38,2,43): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_7.fs(2,39,2,40): typecheck error FS0418: The byref typed value 'v' cannot be used at this point

neg_byref_7.fs(2,42,2,43): typecheck error FS0418: The byref typed value 'v' cannot be used at this point

neg_byref_7.fs(2,47,2,60): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_7.fs(2,47,2,53): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
